# OS-CFDB

./: .codeclimate.yml  .convert.py  .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  AWS-AMI.pem.enc  Dockerfile  LICENSE  Makefile  README.md  TEMPLATE.md  convert.py  pyproject.toml  requirements.txt  test.py
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/: EXAMPLE-TEMPLATE.json  EXAMPLE-TEMPLATE.md  TEMPLATE.json  TEMPLATE.md
.site/: README.md  Vagrantfile  build.sh  docker-compose.yml
.site/ansible-aws-ec2/: ansible.cfg  deploy.sh  requirements.yml  teardown.sh  terminate.yml
.site/cfdb-api/: api.py  config.py  init_mongo.py  uwsgi.ini
.site/cfdb-app/: app.py  config.py  uwsgi.ini
.site/data/certs/: .crt  .key
.site/nginx/: nginx.conf
.site/uwsgi-cfdb-api/: Dockerfile
.site/uwsgi-cfdb-app/: Dockerfile
findings/phishing/: spear_phishing_weaknesses.md
findings/windows/: default_administrator_enabled.md  firewall_misconfiguration.json  insecure_credential_storage.json  insecure_credential_storage.md  insecure_file_shares.json  insecure_file_shares.md  insecure_sysvol_scripts.json  insecure_sysvol_scripts.md  mscachev2_misconfiguration.json  smb_signing_disabled.json  wpad_enabled.md
phishing/: spear_phishing_susceptibility.md  spear_phishing_weaknessess.md
src/os_cfdb/: __init__.py  app.py  main.py  settings.py
src/utils/: .convert.py  convert.py
tests/: test_example.py
web/: stored_xss.md
web/INFORMATION_DISCLOSURE/: database_info_disclosure.md  pii_disclosure.md  schema_enumeration  server_info_disclosure.md
web/LOGIC/: application_logic_abuse.md
web/XSS/: stored_xss.md
web/authentication/: lack_of_password_strength_meter.md
web/information__disclosure/: database_info_disclosure.md  pii_disclosure.md  server_info_disclosure.md
web/information_disclosure/: schema_enumeration
web/logic_/: application_logic_abuse.md
windows/: Insecure_active_direcotry_user_acl.json  Insecure_active_direcotry_user_acl.md  default_administrator_enabled.json  default_administrator_enabled.md  firewall_misconfiguration.json  firewall_misconfiguration.md  inadequate_network_segmentation.json  inadequate_network_segmentation.md  inaququate_network_segmentation.md  insecure_active_directory_user_acl.json  insecure_active_directory_user_acl.md  insecure_credential_storage.md  insecure_file_shares.md  insecure_sysvol_scripts.json  insecure_sysvol_scripts.md  mscachev2_misconfiguration.md  smb_signing_disabled.json  smb_signing_disabled.md  standard_user_with_local_admin.json  standard_user_with_local_admin.md  weak_password_policy.md  weak_spn_password.md  wpad_enabled.md
(+29 files in other folders)
